# pratica-pgc

./: .gitignore  README.md
jurandir/: README.md  jurandir.cabal  stack.yaml
jurandir/.stack-work/: stack.sqlite3
jurandir/.stack-work/ghci/45840f49/: cabal_macros.h
jurandir/.stack-work/ghci/68073371/: cabal_macros.h
jurandir/.stack-work/ghci/9a63fe4b/: cabal_macros.h
jurandir/.stack-work/ghci/a09603b4/: cabal_macros.h
jurandir/.stack-work/ghci/ba98f2c2/: cabal_macros.h
jurandir/.stack-work/ghci/c4d4f29e/: cabal_macros.h
jurandir/.stack-work/ghci/cc222423/: cabal_macros.h
jurandir/src/: BlackWhite.hs  Edge.hs  Gaussian.hs  Grayscale.hs  Main.hs  Unsharp.hs  Utils.hs
jurandira/: README.md  jurandira.cabal
jurandira/src/: .CloneRGB.hs.swp  .Main.hs.swp  Clone.hs  CloneRGB.hs  Main.hs
plot/: plot.py
valkyria/: stack.yaml  valkyria.cabal
valkyria/src/: Main.hs
