name:                valkyria
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/valkyria#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable valkyria
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5, JuicyPixels, vector >= 0.12.3.0, primitive
  other-modules:       Clone, CloneRGB
